--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,9 +9,26 @@ h1{
 /*body*/
 body {
     background-color: black; 
+    text-align: center;
+}
+h2 {
+    font-family: "Verdana", sans-serif;
+    font-size: 42px; 
+    font-weight: 300px; 
+    color: white; 
+    text-align: center; 
+}
+p{
+    font-family: "Verdana", sans-serif;
+    font-size: 20px; 
+    color: grey;  
     text-align: center; 
 }
 /*links*/ 
 a {
     color: aquamarine;
+}
+/*footer*/
+footer p {
+    text-align: right;
 }
