--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,11 +6,6 @@ h1{
     color: white; 
     text-align: center; 
 }
-/*body*/
-body {
-    background-color: black; 
-    text-align: center;
-}
 h2 {
     font-family: "Verdana", sans-serif;
     font-size: 42px; 
@@ -18,6 +13,12 @@ h2 {
     color: white; 
     text-align: center; 
 }
+/*body*/
+body {
+    background-color: black; 
+    text-align: center;
+}
+/*paragraphs*/
 p{
     font-family: "Verdana", sans-serif;
     font-size: 20px; 
